Updates to help clean up temp or local only files.

--- a/ADFSLab/ADFSLab/ClaimsWebApp/ClaimsWebApp/ClaimsWebApp.csproj
+++ b/ADFSLab/ADFSLab/ClaimsWebApp/ClaimsWebApp/ClaimsWebApp.csproj
@@ -25,6 +25,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -122,6 +123,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <None Include="Properties\PublishProfiles\Local File System.pubxml" />
+    <None Include="Properties\PublishProfiles\mcweeclaims - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
