--- a/ADFSLab/ADFSLab/ClaimsWebApp/ClaimsWebApp/Web.config
+++ b/ADFSLab/ADFSLab/ClaimsWebApp/ClaimsWebApp/Web.config
@@ -54,11 +54,13 @@
   </runtime>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701">
+      <!--<compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701">-->
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4" >
         <providerOption name="CompilerVersion" value="v4.0"/>
         <providerOption name="WarnAsError" value="false"/>
       </compiler>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.VisualBasic.VBCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+">
+      <!--<compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.VisualBasic.VBCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+">-->
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.VisualBasic.VBCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4" >
         <providerOption name="CompilerVersion" value="v4.0"/>
         <providerOption name="OptionInfer" value="true"/>
         <providerOption name="WarnAsError" value="false"/>
@@ -77,6 +79,7 @@
         <!-- This should include the URN the STS will use when creating the audience attribute -->
         <add value="https://claims.corpnet.org/"/>
         <add value="urn:claims:corpnet"/>
+        <add value="urn:claims:mymildemo"/>
       </audienceUris>
       <issuerNameRegistry type="System.IdentityModel.Tokens.ConfigurationBasedIssuerNameRegistry, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
         <trustedIssuers>
@@ -86,6 +89,7 @@
           -->
           <add thumbprint="32723ca308ca696695235a3581326a8ed5cebc08" name="PassiveSTS" />
           <add thumbprint="421e50ac3f8c163228dbf7c6f34be46f83dd5ee8" name="otherAdfs" />
+          <add thumbprint="25 21 57 82 79 1a b5 91 84 ae cf 8f 06 32 81 9f e2 db f1 c4" name="myMilDemoADFS"/>
         </trustedIssuers>
       </issuerNameRegistry>
       <certificateValidation certificateValidationMode="None"/>
@@ -99,7 +103,8 @@
         REALM is the realm configured in ADFS so it knows who is calling and where to respond back to
         REPLY is the URL that ADFS should redirect the user back to when authentication is a success
       -->
-      <wsFederation passiveRedirectEnabled="true" issuer="https://adfs.corpnet.org/adfs/ls" realm="urn:claims:corpnet" reply="https://claims.corpnet.org/" requireHttps="false"/>
+      <!--<wsFederation passiveRedirectEnabled="true" issuer="https://adfs.corpnet.org/adfs/ls" realm="urn:claims:corpnet" reply="https://claims.corpnet.org/" requireHttps="false"/>-->
+      <wsFederation passiveRedirectEnabled="true" issuer="https://fs.mymildemo.us/adfs/ls" realm="urn:claims:mymildemo" reply="https://mcweeclaims.azurewebsites.net/" requireHttps="false"/>
     </federationConfiguration>
   </system.identityModel.services>
 </configuration>
