Updates to make the Advanced Lab complete for merge with primary branch

--- a/ADFSLab/ADFSLab/ClaimsWebApp/ClaimsWebApp/Web.config
+++ b/ADFSLab/ADFSLab/ClaimsWebApp/ClaimsWebApp/Web.config
@@ -26,7 +26,8 @@
   <system.web>
     <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.5"/>
-    <httpRuntime/>
+    <!-- requestValidationMode was added for Azure Web App -->
+    <httpRuntime requestValidationMode="2.0"/>
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
       <namespaces>
         <add namespace="System.Web.Optimization"/>
@@ -93,6 +94,11 @@
         </trustedIssuers>
       </issuerNameRegistry>
       <certificateValidation certificateValidationMode="None"/>
+      <!-- This section was added for deployment to Azure Web App-->
+      <securityTokenHandlers>
+        <remove type="System.IdentityModel.Tokens.SessionSecurityTokenHandler, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <add type="System.IdentityModel.Services.Tokens.MachineKeySessionSecurityTokenHandler, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </securityTokenHandlers>
     </identityConfiguration>
   </system.identityModel>
   <system.identityModel.services>
