--- a/SamlWeb/SamlReplay/SamlReplay.csproj
+++ b/SamlWeb/SamlReplay/SamlReplay.csproj
@@ -102,6 +102,7 @@
     <Content Include="Scripts\bootstrap.bundle.min.js.map" />
     <Content Include="Scripts\bootstrap.bundle.js.map" />
     <Content Include="SamlReplay.Master" />
+    <None Include="Properties\PublishProfiles\SamlReplayWebApp - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.0.0-vsdoc.js" />
     <Content Include="Scripts\jquery-3.0.0.js" />
     <Content Include="Scripts\jquery-3.0.0.min.js" />
